--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,10 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Teleport\Examples\Scripts\Components\ExampleControllerHighlight.cs" />
+    <Compile Include="Assets\Teleport\Examples\Scripts\Components\GrabSnowball.cs" />
+    <Compile Include="Assets\Teleport\Examples\Scripts\Components\Snowball.cs" />
+    <Compile Include="Assets\Teleport\Examples\Scripts\Components\Throwable.cs" />
     <Compile Include="Assets\Teleport\Scripts\Components\Input.cs" />
     <Compile Include="Assets\Teleport\Scripts\RenderPipeline\Runtime\TeleportCameraRenderer.Editor.cs" />
     <Compile Include="Assets\GlobalTransform.cs" />
